hphp/test/zend/good/zend/method_exists.php
<?php
class testclass { function testfunc() { } }
var_dump(method_exists('testclass','testfunc'));
var_dump(method_exists('testclass','nonfunc'));
?>