hphp/test/zend/bad/zend/class_alias_002.php
<?php

class foo { }

class_alias('foo', 'FOO');

?>